--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastly/performance-observer-polyfill": "^2.0.0-pre-1.3",
+    "@openinsights/openinsights": "^0.2.0",
     "unfetch": "^4.1.0"
   },
   "devDependencies": {
