--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "module": "es6",
     "lib": ["DOM", "ES2015", "ES2020"],
     "moduleResolution": "node",
-    "preserveSymlinks": true,
+    "preserveSymlinks": true
   },
   "include": [
     "src/**/*"
@@ -25,10 +25,5 @@
   "exclude": [
     "dist",
     "**/*.spec.ts"
-  ],
-  "references": [
-    {
-        "path": "../open-insights"
-    }
   ]
 }
